--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,21 @@
 anyio==3.5.0
 fastapi==0.71.0
+flake8==4.0.1
+greenlet==1.1.2
+h11==0.12.0
+h2==4.1.0
+hpack==4.0.0
+hypercorn==0.13.2
+hyperframe==6.0.1
 idna==3.3
+mccabe==0.6.1
+priority==2.0.0
+pycodestyle==2.8.0
 pydantic==1.9.0
+pyflakes==2.4.0
 sniffio==1.2.0
+SQLAlchemy==1.4.29
 starlette==0.17.1
+toml==0.10.2
 typing-extensions==4.0.1
+wsproto==1.0.0
