--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+aiosqlite==0.17.0
 anyio==3.5.0
+atlastk==0.13
 fastapi==0.71.0
 flake8==4.0.1
 greenlet==1.1.2
@@ -8,14 +10,18 @@ hpack==4.0.0
 hypercorn==0.13.2
 hyperframe==6.0.1
 idna==3.3
+iso8601==0.1.16
 mccabe==0.6.1
 priority==2.0.0
 pycodestyle==2.8.0
 pydantic==1.9.0
 pyflakes==2.4.0
+pypika-tortoise==0.1.3
+pytz==2021.3
 sniffio==1.2.0
-SQLAlchemy==1.4.29
 starlette==0.17.1
 toml==0.10.2
+tortoise==0.1.1
+tortoise-orm==0.18.1
 typing-extensions==4.0.1
 wsproto==1.0.0
