--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 aiosqlite==0.17.0
 anyio==3.5.0
 atlastk==0.13
+black==22.1.0
+click==8.0.3
 fastapi==0.71.0
 flake8==4.0.1
 greenlet==1.1.2
@@ -12,6 +14,9 @@ hyperframe==6.0.1
 idna==3.3
 iso8601==0.1.16
 mccabe==0.6.1
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.4.1
 priority==2.0.0
 pycodestyle==2.8.0
 pydantic==1.9.0
@@ -21,7 +26,9 @@ pytz==2021.3
 sniffio==1.2.0
 starlette==0.17.1
 toml==0.10.2
+tomli==2.0.0
 tortoise==0.1.1
 tortoise-orm==0.18.1
 typing-extensions==4.0.1
+websocket-client==1.2.3
 wsproto==1.0.0
